k8s/falco/overlays/dev/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: falco-dev
  namespace: falco
spec:
  hosts:
  - falco-dev.hamedstock.com
  gateways:
  - falco-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: falco-falcosidekick-ui
        port:
          number: 2802
